--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -14,9 +14,13 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupA
 
   public override Database.QueryLocator start(Database.BatchableContext bc) {
     this.isProcessed = true;
-    // note - if the optional where clause was appended to the passed in query string, this.recordIds is also
-    // used as a bind variable
-    return Database.getQueryLocator(this.queryString);
+    // note - if the optional where clause was appended to the passed in query string,
+    // this.recordIds is also used as a bind variable
+    String finalQueryString = this.queryString;
+    if (this.queryString.contains('ORDER BY') && this.queryString.contains('ALL ROWS')) {
+      finalQueryString = this.queryString.replace('ALL ROWS', '') + ' ALL ROWS';
+    }
+    return Database.getQueryLocator(finalQueryString);
   }
 
   public virtual override void execute(Database.BatchableContext bc, List<SObject> calcItems) {
